# Curio

./: .gitignore  CMakeLists.txt  README.md
.github/events/: release-published.json  workflow-dispatch-local.json
.github/workflows/: flatpak-build.yml
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  curio  curio-catalog-worker
build-test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-test/curio-catalog-worker_autogen/: deps  moc_predefs.h
build-test/curio_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-test/curio_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-test/curio_autogen/M4YTXQ7V2H/: moc_AppListModel.cpp  moc_AppListModel.cpp.d  moc_OperationModel.cpp  moc_OperationModel.cpp.d
build-test/curio_autogen/VU2PALRVTW/: moc_AppStreamProvider.cpp  moc_AppStreamProvider.cpp.d  moc_CatalogCache.cpp  moc_CatalogCache.cpp.d  moc_FlathubApiClient.cpp  moc_FlathubApiClient.cpp.d  moc_FlatpakBackend.cpp  moc_FlatpakBackend.cpp.d  moc_FlatpakTransactionRunner.cpp  moc_FlatpakTransactionRunner.cpp.d  moc_TrackedBuildSource.cpp  moc_TrackedBuildSource.cpp.d
build-test/curio_autogen/YPKJ5OE7LN/: moc_AppCardWidget.cpp  moc_AppCardWidget.cpp.d  moc_AppDetailsWidget.cpp  moc_AppDetailsWidget.cpp.d  moc_AppItemDelegate.cpp  moc_AppItemDelegate.cpp.d  moc_InstalledRowWidget.cpp  moc_InstalledRowWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_RuntimeUpdatesRowWidget.cpp  moc_RuntimeUpdatesRowWidget.cpp.d  moc_TrackedBuildSetupDialog.cpp  moc_TrackedBuildSetupDialog.cpp.d
flatpak/: bwrap-host-wrapper.sh  flatpak-host-wrapper.sh  io.github.curio.Curio.flatpakref  io.github.curio.Curio.json
resources/: curio.desktop  io.github.curio.Curio.metainfo.xml  resources.qrc
src/: main.cpp
src/backend/: AppDisplayNames.cpp  AppDisplayNames.h  AppStreamProvider.cpp  AppStreamProvider.h  CatalogCache.cpp  CatalogCache.h  CurioSettings.cpp  CurioSettings.h  FlathubApiClient.cpp  FlathubApiClient.h  FlathubMediaUtils.cpp  FlathubMediaUtils.h  FlatpakBackend.cpp  FlatpakBackend.h  FlatpakGlibInclude.h  FlatpakInstallationService.cpp  FlatpakInstallationService.h  FlatpakRefMapper.cpp  FlatpakRefMapper.h  FlatpakRemoteCatalog.cpp  FlatpakRemoteCatalog.h  FlatpakScope.h  FlatpakTransactionRunner.cpp  FlatpakTransactionRunner.h  GitHost.cpp  GitHost.h  NetworkAccessUtils.cpp  NetworkAccessUtils.h  SandboxedFlatpakEnv.cpp  SandboxedFlatpakEnv.h  TrackedBuildClassifier.cpp  TrackedBuildClassifier.h  TrackedBuildMatcher.cpp  TrackedBuildMatcher.h  TrackedBuildSource.cpp  TrackedBuildSource.h
src/models/: AppInfo.h  AppListModel.cpp  AppListModel.h  Operation.h  OperationModel.cpp  OperationModel.h  StoreTemplate.h  TrackedBuild.h
src/tools/: catalog_worker.cpp
src/ui/: AppCardWidget.cpp  AppCardWidget.h  AppDetailsWidget.cpp  AppDetailsWidget.h  AppItemDelegate.cpp  AppItemDelegate.h  InstalledRowWidget.cpp  InstalledRowWidget.h  MainWindow.cpp  MainWindow.h  RuntimeUpdatesRowWidget.cpp  RuntimeUpdatesRowWidget.h  TrackedBuildSetupDialog.cpp  TrackedBuildSetupDialog.h
